gforge (3.0-2+) unstable; urgency=low

  * 

 -- Roland Mas <lolando@debian.org>  Tue,  8 Jul 2003 21:32:26 +0200

gforge (3.0-2) unstable; urgency=low

  * [Roland] Applied patch provided by Denis Barbier <barbier@debian.org>
    and the French l10 team, to switch the Debconf templates to po-debconf
    (closes: #199939).  Many thanks, guys!

 -- Roland Mas <lolando@debian.org>  Tue,  8 Jul 2003 21:23:45 +0200

gforge (3.0-1) unstable; urgency=low

  * [Roland] The much-awaited 3.0 release!  Yay!
  * [Roland] This Debian release is dedicated to Christian and his wife,
    whose marriage was five years old on the 20th of June.
  * [Roland] Do not take the availability of mod_userdir.c for granted.
    Patch from Tomas Pospisek <tpo_deb@sourcepole.ch> (closes: #197606).
  * [Roland] Bumped Standards-Version: to 3.5.10 (no changes needed).
  * [Christian] added sys_ldap_version variable and take it in account if
    defined in common/include/ldap.php after bind
  * [Roland] Rename French versions of the fields in Debconf templates
    from *-fr_FR to *-fr (closes: #199743).
  * [Roland] Cleanup in install-ldap.sh.

 -- Roland Mas <lolando@debian.org>  Thu,  3 Jul 2003 21:09:15 +0200

gforge (3rc2-4) unstable; urgency=low

  * [Roland] Install README.Debian into all packages (Gforge bug #340),
    and README.Multipack into gforge-common (closes: #193151).
  * [Roland] We can even quit using the OID 1.3.6.1.4.1.9586.1.1
    (iso.org.dod.internet.private.enterprise.Debian.package.sourceforge)
    and start using the newly assigned 1.3.6.1.4.1.9586.100.3
    (iso.org.dod.internet.private.enterprise.Debian.package.gforge)
    instead.  That means a global s/debSf/debGforge/ in attribute types
    and object classes, in all the files that use LDAP.
  * [Roland] Lots of fixes in the Debconf variable handling.  It should be
    more straightforward now, more logical (variables have been moved to
    their proper package), more policy-compliant (gforge.conf is read and